# PROYECTO_TOPICOS_IA_MINI_BERT

./: .gitignore  CMakeLists.txt  README.md  download_weigths.py  main.cpp  pasos.txt  requirements.txt  setup_simple.sh  test_tokens.py  tokenizer.py
include/: Attention.h  Config.h  Embeddings.h  FeedForward.h  LayerNorm.h  Tokenizer.h  Transformer.h  TransformerEncoder.h  Utils.h
src/: Attention.cpp  Config.cpp  Embeddings.cpp  FeedForward.cpp  LayerNorm.cpp  Tokenizer.cpp  Transformer.cpp  TransformerEncoder.cpp  Utils.cpp
